--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,22 +5,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4    # Updated from v2 to v4
+        
       - name: Set up Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4  # Updated from v2 to v4
         with:
           distribution: "temurin"
           java-version: 17
+          
       - name: Decode Keystore
         uses: timheuer/base64-to-file@v1
         id: android_keystore
         with:
             fileName: "android_keystore.keystore"
             encodedString: ${{ secrets.KEYSTORE }}
+            
       - name: Build the app
         run: ./gradlew assembleRelease -PshowUpdateButton=true -Pandroid.injected.signing.store.file=${{ steps.android_keystore.outputs.filePath }} -Pandroid.injected.signing.store.password=${{ secrets.PASSWORD }} -Pandroid.injected.signing.key.alias=${{ secrets.ALIAS }} -Pandroid.injected.signing.key.password=${{ secrets.PASSWORD }}
+        
       - name: Upload
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4  # Updated from v3 to v4
         with:
             name: app-release.apk
             path: app/build/outputs/apk/release/app-release.apk
